<resources>
    <string name="app_name">Elisa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BIENVENIDO</string>
    <string name="nav_header_subtitle">cristiamherrera@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Social</string>
    <string name="menu_slideshow">Chat</string>
    <string name="label">email</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="ingresar">Ingresar</string>
    <string name="card_required">Requerido</string>
    <string name="registrar">REGISTRAR</string>
    <string name="nombreapp">EMPRESA DE LOCALIZACION INTELIGENTE SEGURIDAD ACTIVA</string>
</resources>