<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity"
    android:background="@drawable/fondo_elisa">

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:bottomLeftRadius="7dp"
        android:bottomRightRadius="7dp"
        android:hint="@string/registrar"
        android:text="@string/registrar"
        android:textColor="@color/white"
        android:topLeftRadius="7dp"
        android:topRightRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnIngresar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:background="@color/black"
        android:hint="@string/ingresar"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:layout_marginBottom="56dp"
        android:text="Aqui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="374dp"
        android:layout_height="181dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_blanco" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="99dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/nombreapp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


</androidx.constraintlayout.widget.ConstraintLayout>